# src/main/java/org/vt/aggregation/api/UsersRestController.java
@@ -5,11 +5,14 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
+import org.vt.aggregation.api.dto.PaginationResponseDto;
+import org.vt.aggregation.api.dto.ReceiveUsers2ParamsParameter;
 import org.vt.aggregation.api.dto.UserResponseDto;
 import org.vt.aggregation.mappers.UsersMapper;
 import org.vt.aggregation.service.UsersAggregationService;
 
 import java.util.List;
+import java.util.Map;
 
 @RestController
 @RequiredArgsConstructor
@@ -22,14 +25,16 @@ public class UsersRestController implements UsersApi {
     @ResponseStatus(HttpStatus.OK)
     @Override
     public List<UserResponseDto> receiveUsers(String id, String username, String name, String surname) {
-        var users = usersAggregationService.findUsers(UsersAggregationService.UsersFilterParams.of(id, username, name, surname));
+        var users = usersAggregationService.findUsers(
+                UsersAggregationService.UsersFilterParams.of(id, username, name, surname));
         log.info("users = {}", users);
         return usersMapper.map(users);
     }
 
-    @ResponseStatus(HttpStatus.OK)
     @Override
-    public List<UserResponseDto> receiveUsers2(String id, String username, String name, String surname) {
-        return List.of();
+    public PaginationResponseDto receiveUsers2(ReceiveUsers2ParamsParameter params, Map<String, String> mapping,
+            Map<String, List<String>> mappings) {
+        return null;
     }
+
 }
